[tool.poetry]
name = "chatbot-arena-human-preference-predictions"
version = "0.1.0"
description = ""
authors = ["Emily Felker <emilyfelker@gmail.com>"]
#readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
