[tool.poetry]
name = "chatbot-arena-human-preference-predictions"
version = "0.1.0"
description = ""
authors = ["Emily Felker <emilyfelker@gmail.com>"]
#readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
seaborn = "^0.13.2"
matplotlib = "^3.9.2"
jupytext = "^1.16.4"
textstat = "^0.7.4"
py-readability-metrics = "^1.4.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
